--- a/css/style.css
+++ b/css/style.css
@@ -120,10 +120,12 @@ a:focus {
     right: 15px;
     bottom: 15px;
     z-index: 9;
+    border: 3px solid #232323;
 }
 
 .back-to-top i {
     color: #ffffff;
+    
 }
 
 .back-to-top:hover i {
@@ -1307,7 +1309,7 @@ a:focus {
 .contact {
     position: relative;
     width: 100%;
-    margin: 40px 0;
+    margin-top: 40px;
     background: #2568ef;
 }
 
